--- a/analysis/dada2_processing.Rmd
+++ b/analysis/dada2_processing.Rmd
@@ -92,26 +92,6 @@ names(filtRs) <- sample.names
 ## Learn errors and make seq table  
 
 set.seed(19883)
-# Learn forward error rates
-# SOME ISSUE with MERGING so GOING FOR Forwards only Becuase of the reagion and chemmistry used for sequencing
-#errF <- learnErrors(filtFs, nbases=1e8, multithread=F, randomize=TRUE)
-# Learn reverse error rates
-#errR <- learnErrors(filtRs, nbases=1e8, multithread=F, randomize=TRUE)
-
-#err <- learnErrors(filtFs, nbases = 1e8, multithread=F, randomize=TRUE)
-# Infer sequence variants
-#dds <- vector("list", length(sample.names))
-#dds <- vector("list", length(sample.names))
-#names(dds) <- sample.names
-
-#for(sam in sample.names) {
-#  cat("Processing:", sam, "\n")
-#  derep <- derepFastq(filtFs[[sam]])
-#  dds[[sam]] <- dada(derep, err=err, multithread=TRUE)
-#}
-# Construct sequence table and write to disk
-
-#seqtab <- makeSequenceTable(seqtab)
 ## Learn errors and make seq table  
 # Learn forward error rates
 errF <- learnErrors(filtFs, nbases=1e8, multithread=F)
@@ -150,7 +130,7 @@ seqtab2 <- removeBimeraDenovo(seqtab, method="consensus", multithread=TRUE)
 dbmmdb <- "data_raw/03_amplicon/rrna_MMDb/dbmm_tax_db.fas"
 tax <- assignTaxonomy(seqtab2, dbmmdb, 
                       minBoot=50, verbose = T,
-                     outputBootstraps = F)
+                      outputBootstraps = F)
 
 # Write to disk
 saveRDS(tax, "data/03_amplicon/rds/tax_final.rds") # CHANGE ME ...
@@ -177,8 +157,10 @@ fit = pml(treeNJ, data=phang.align)
 ## negative edges length changed to 0!
 
 fitGTR <- update(fit, k=4, inv=0.2)
-fitGTR <- optim.pml(fitGTR, model="GTR", optInv=TRUE, optGamma=TRUE,
-                      rearrangement = "stochastic", control = pml.control(trace = 0))
+fitGTR <- optim.pml(fitGTR, model="GTR", 
+                    optInv=TRUE, optGamma=TRUE,
+                    rearrangement = "stochastic", 
+                    control = pml.control(trace = 0))
 detach("package:phangorn", unload=TRUE)
 
 saveRDS(fitGTR, "data/03_amplicon/rds/fitGTR_tree.rds") 
@@ -199,8 +181,9 @@ samdat <- sample_data(sample_data(metatable))
 rownames(samdat)
 rownames(seqtab2)
 # make phyloseq object
-pseq01 <- phyloseq(otu_table(t(seqtab2), taxa_are_rows=T), sample_data(samdat),
-               tax_table(tax))
+pseq01 <- phyloseq(otu_table(t(seqtab2), taxa_are_rows=T), 
+                   sample_data(samdat),
+                   tax_table(tax))
 
 saveRDS(pseq01, "data/03_amplicon/rds/pseq01.rds") 
 
