--- a/analysis/wetlab_anlaysis.Rmd
+++ b/analysis/wetlab_anlaysis.Rmd
@@ -15,19 +15,19 @@ editor_options:
 
 # Introduction  
 This document consist of codes for analysis and visualization of lab data from growth assays, hplc measurement of individual and mixed cultures of Db-MM. 
- 
 
+## Set up
 ```{r, message=FALSE}
-
 library(tidyverse)
 library(ggplot2)
 library(ggpubr)
 library(microbiome)
 library(patchwork)
+source('code/custom_funs.R')
 
 ```
 
-## Define a color for metabolites tested in the Db-MM  
+Define a color for metabolites tested in the Db-MM  
 
 ```{r}
 # for metabolites tested in the Db-MM  
@@ -40,24 +40,7 @@ ColorsDT <- c(Acetate = "#CBD588", Propionate = "#5F7FC7",
 ```
 
 
-```{r}
-
-# Define a color for each strain used in the Db-MM 
-strain.colors <- c(`Bacteroides ovatus` = "#1F78B4", 
-                   `Bacteroides xylanisolvens` = "#B2DF8A", 
-                   `Anaerobutyricum soehngenii` = "#FDBF6F", 
-                   `Agathobacter rectalis`= "#33A02C", 
-                   `Eubacterium siraeum` ="#FB9A99", 
-                   `Faecalibacterium prausnitzii` = "#A6CEE3", 
-                   `Lachnospiraceae bacterium 7_1_58FAA` = "#E31A1C", 
-                   `Flavonifractor plautii` = "#E31A1C",
-                   `Roseburia intestinalis` = "#CAB2D6", 
-                   `Subdoligranulum variabile` = "#FF7F00", 
-                   `Coprococcus catus` = "#6A3D9A")
-```
-
-
-## Mono Culture  
+# Mono Culture  
 
 ```{r}
 
@@ -65,21 +48,19 @@ hplc_data <- read.csv("data_raw/02_wetlab/mono_culture_hplc.csv",
                       row.names = 1, header = T, 
                       stringsAsFactors = F)
 
-
-hplc_data$BacterialStrain <- gsub("Lachnospiraceae bacterium 7_1_58FAA", "Flavonifractor plautii",
+hplc_data$BacterialStrain <- gsub("Lachnospiraceae bacterium 7_1_58FAA", 
+                                  "Flavonifractor plautii",
                                   hplc_data$BacterialStrain)
-
-
+head(hplc_data)
 ```
 
 ```{r}
-head(hplc_data)
 all2 <- reshape2::melt(hplc_data)
 all2 <- subset(all2, variable != "Isobutyrate") # below detection limit
 ```
 
 
-### Acetate concentrations  
+## Acetate concentrations  
 ```{r}
 ## Since acetate was added in the media and had high concentration, I will plot it separately 
 all2.acetate <- subset(all2, variable == "Acetate")
@@ -87,27 +68,38 @@ all2.acetate <- subset(all2, variable == "Acetate")
 all2.acetate$TimepointNum <- all2.acetate$Timepoint
 all2.acetate$TimepointNum <- as.numeric(gsub("T", "",all2.acetate$TimepointNum))
 
-p.ace <- ggline(all2.acetate, "TimepointNum", "value", color = "BacterialStrain", 
+p.ace <- ggline(all2.acetate, 
+                x ="TimepointNum", 
+                y = "value", 
+                color = "BacterialStrain", 
                 add = "mean_se",
                 ylab = "Acetate concentration (mM)",
                 xlab = "Time (hr)", 
-                legend = "right", size = 1,
-                ncol =5) + rotate_x_text() + scale_color_manual("", values= strain.colors) 
-
-p.ace <- p.ace + theme_bw(base_size = 12) + theme( 
-                                    strip.background = element_rect(fill="white")) 
-
-
-p.ace <- ggpar(p.ace, legend = "right", font.legend = c(10, "italic"))
-
+                legend = "right", 
+                size = 0.7,
+                alpah= 0.5,
+                ncol =5,
+                add.params = list(alpha = 0.75)) + 
+  rotate_x_text() + 
+  scale_color_manual("", values= strain.colors) +
+  theme_minimal(base_size = 10) + 
+  theme(#strip.background = element_rect(fill="white"),
+    strip.background = element_rect(color= "grey10"), 
+    strip.text = element_text(face = "italic"),
+    panel.border = element_rect(colour = "grey10", fill=NA),
+    axis.text.x=element_text(colour="grey10", size = 11),
+    axis.text.y=element_text(colour="grey10", size = 11),
+    axis.title = element_text(colour="grey10", size = 11),
+    panel.spacing = unit(0.1, "lines")) 
+p.ace <- ggpar(p.ace, legend = "right", font.legend = c(8, "italic"))
 p.ace
-ggsave("data/02_wetlab/figs/01_mono_culture_HPLC_Acetate.pdf", height = 5, width = 10)
+ggsave("data/02_wetlab/figs/R1_mono_culture_HPLC_Acetate.pdf", height = 4, width = 8)
 
 
 ```
 
 
-### Remaining metabolites  
+## Remaining metabolites  
 ```{r}
 
 all2.noace <- subset(all2, variable !="Acetate")
@@ -116,134 +108,293 @@ all2.noace$TimepointNum <- all2.noace$Timepoint
 all2.noace$TimepointNum <- as.numeric(gsub("T", "",all2.noace$TimepointNum))
 #head(hplc_metadata)
 
-p1 <- ggline(all2.noace, "TimepointNum", "value", color = "variable", 
+p1 <- ggline(all2.noace, 
+             x = "TimepointNum", 
+             y = "value", 
+             color = "variable", 
              add = "mean_se",
              facet.by = "BacterialStrain",
              ylab = "Concentration (mM)",
              xlab = "Time (hr)", 
              legend = "right", #scales ="free",
              ncol = 5,
-             size = 1,
+             size = 0.7,
              alpha=0.5) + rotate_x_text() + 
-  scale_color_manual("", values= ColorsDT)
-p1 <- p1 + 
-  theme_bw(base_size = 10) + 
-  theme(strip.background = element_rect(fill="white")) + 
-  theme(strip.text = element_text(face = "italic"))
-p1 <- p1  + geom_hline(aes(yintercept=4), linetype="dashed", alpha = 0.5) 
+  scale_color_manual("", values= ColorsDT) +
+  theme_minimal(base_size = 10) + 
+  theme(#strip.background = element_rect(fill="white"),
+    strip.background = element_rect(color= "grey10"), 
+    strip.text = element_text(face = "italic"),
+    panel.border = element_rect(colour = "grey10", fill=NA),
+    axis.text.x=element_text(colour="grey10", size = 11),
+    axis.text.y=element_text(colour="grey10", size = 11),
+    axis.title = element_text(colour="grey10", size = 11),
+    panel.spacing = unit(0.1, "lines")) +  
+  geom_hline(aes(yintercept=4), linetype="dashed", alpha = 0.5) 
 p1 
 
 
-#dir.create("results")
-
-ggsave("data/02_wetlab/figs/01_mono_culture_HPLC_metabolites.pdf", height = 5, width = 14)
+ggsave("data/02_wetlab/figs/R1_mono_culture_HPLC_metabolites.pdf", height = 5, width = 14)
 #ggsave("output/figs/01_mono_culture_HPLC_metabolites.png", height = 5, width = 14)
 #ggsave("output/figs/01_mono_culture_HPLC_metabolites.tiff", height = 5, width = 14)
 
 ```
 
-```{r}
-p1 / (p.ace + plot_spacer() +plot_spacer()) + plot_layout(heights = c(2,1)) + plot_annotation(tag_levels = "A") #+ plot_layout(guides = 'collect')
-ggsave("data/02_wetlab/figs/Edit_01_mono_cultue_HPLC_metabolites.pdf", height = 9, width = 16)
+# Reviewer-2  
+Split sugars and SCFAs  
 
+## Sugars  
+```{r}
+#Butyrate   Formate    Lactate    Propionate Cellobiose Fructose   Glucose    Xylose
+sug <- c("Fructose", "Glucose", "Xylose")
+sugs.all <- all2.noace %>% 
+  filter(variable %in% sug) %>% 
+  ggline(x = "TimepointNum", 
+         y = "value", 
+         color = "variable", 
+         add = "mean_se",
+         facet.by = "BacterialStrain",
+         ylab = "Concentration (mM)",
+         xlab = "Time (hr)", 
+         legend = "right", #scales ="free",
+         ncol = 5,
+         size = 0.75,
+         alpha=0.5) + rotate_x_text() + 
+  scale_color_manual("", values= ColorsDT[7:9]) +
+  theme_minimal(base_size = 10) + 
+  theme(#strip.background = element_rect(fill="white"),
+    strip.background = element_rect(color= "grey10"), 
+    strip.text = element_text(face = "italic"),
+    panel.border = element_rect(colour = "grey10", fill=NA),
+    axis.text.x=element_text(colour="grey10", size = 11),
+    axis.text.y=element_text(colour="grey10", size = 11),
+    axis.title = element_text(colour="grey10", size = 11),
+    panel.spacing = unit(0.1, "lines")) 
+sugs.all
+ggsave("data/02_wetlab/figs/R1_mono_culture_HPLC_sugars.pdf", height = 4, width = 12)
 ```
 
+## VFAs    
+```{r}
+scfa.all <- all2.noace %>% 
+  filter(!variable %in% c(sug, "Cellobiose")) %>% 
+  ggline( "TimepointNum", "value", color = "variable", 
+          add = "mean_se",
+          facet.by = "BacterialStrain",
+          ylab = "Concentration (mM)",
+          xlab = "Time (hr)", 
+          legend = "right", #scales ="free",
+          ncol = 5,
+          size = 0.75,
+          alpha=0.5) + rotate_x_text() + 
+  scale_color_manual("", values= ColorsDT[c(1:3,5,6)]) +
+  theme_minimal()+
+  theme(#strip.background = element_rect(fill="white"),
+    strip.background = element_rect(color= "grey10"), 
+    strip.text = element_text(face = "italic"),
+    panel.border = element_rect(colour = "grey10", fill=NA),
+    axis.text.x=element_text(colour="grey10", size = 11),
+    axis.text.y=element_text(colour="grey10", size = 11),
+    axis.title = element_text(colour="grey10", size = 11),
+    panel.spacing = unit(0.1, "lines"))  
+  #geom_hline(aes(yintercept=4), linetype="dashed", alpha = 0.5) 
+scfa.all
+ggsave("data/02_wetlab/figs/R1_mono_culture_HPLC_SCFA.pdf", height = 4, width = 12)
+```
 
-## Mixed culture  
+```{r}
+#p.ace.n + p.ace.leg + plot_layout(heights = c(2,1))
+
+scfa.all / (p.ace + plot_spacer()) + plot_layout(heights = c(2,1), guides = "collect")
+ggsave("data/02_wetlab/figs/R1_mono_culture_SCFA_Acetate.pdf", height = 6, width = 12)
+```
+
+# Mixed culture  
 
 ```{r}
 
 mixed_data <- read.csv("data_raw/02_wetlab/mixed_culture_scfa_gc.csv", 
-                      row.names = 1, header = T, 
-                      stringsAsFactors = F)
-
-#mixed_data_sub <- mixed_data[, -c(2, 4, 5, 6 )]
+                       row.names = 1, header = T, 
+                       stringsAsFactors = F)
 
 mixed_data_2 <- reshape2::melt(mixed_data)
-
-#mixed_data_2 <- subset(mixed_data_2, CarbonSource != "Cellobiose-Xylan-Starch-Inulin")
 
 mixed_data_2$TimepointNum <- mixed_data_2$Timepoint
 mixed_data_2$TimepointNum <- as.numeric(gsub("T", "",mixed_data_2$TimepointNum))
 
 p4 <- ggline(mixed_data_2, "TimepointNum", "value", color = "variable", 
-       add = "mean_se", 
-       ylab = "Concentration (mM)",
-       xlab = "Time (hr)", legend = "right",
-       size = 1.5) + rotate_x_text() + scale_color_manual("Legend", values= ColorsDT)
+             add = "mean_se", 
+             ylab = "Concentration (mM)",
+             xlab = "Time (hr)", legend = "right",
+             size = 1.5) + 
+  rotate_x_text() + 
+  scale_color_manual("",values= ColorsDT[c(1,2,3,4,5,6,12)])
 p4 <- p4 + geom_vline(aes(xintercept=1.5), linetype="dashed", alpha = 0.5) + geom_vline(aes(xintercept=2.5), linetype="dashed", alpha = 0.7) 
 p4 <- p4 + theme_bw(base_size = 14) 
 p4
 
-ggsave("data/02_wetlab/figs/01_Figure_Mixed_HPLC.pdf", height = 3, width = 6)
-ggsave("data/02_wetlab/figs/01_Figure_Mixed_HPLC.png", height = 3, width = 6)
-ggsave("data/02_wetlab/figs/01_Figure_Mixed_HPLC.tiff", height = 3, width = 6)
+ggsave("data/02_wetlab/figs/R1_Figure_Mixed_HPLC.pdf", height = 3, width = 6)
 
 ```
 
+## Reveiwer-1  
 
-Optical density and pH  
 ```{r}
+acetate_t0 <- subset(mixed_data_2, Timepoint == "T0" & variable == "Acetate") %>% 
+  summarise(mean.conc = mean(value),
+            sd.conc = sd(value))
+acetate_t0
+#  mean.conc   sd.conc
+#  27.87145 0.5910155
+```
 
+## Reviewer 2
+```{r}
+scfa_vals <- subset(mixed_data_2) %>% 
+  group_by(variable, Timepoint) %>% 
+  summarise(mean.conc = mean(value),
+            sd.conc = sd(value))
+scfa_vals
+
+readr::write_csv(scfa_vals, "data/02_wetlab/tables/mixed_cultre_scfas.csv")
+DT::datatable(scfa_vals)
+```
+
+# Optical density and pH  
+```{r}
 od_metadata <- read.csv("data_raw/02_wetlab/mixed_culture_od_ph.csv", 
-                      row.names = 1, header = T, 
-                      stringsAsFactors = F)
+                        row.names = 1, header = T, 
+                        stringsAsFactors = F)
 
 ```
 
 
 ```{r}
-
 # convert to long format
 all.OD2 <- reshape2::melt(od_metadata)
 
 all.OD2 <- subset(all.OD2, variable !="Replicate")
 
-# create a line plot
-p.od <- ggline(all.OD2, "Timepoint", "value",
-       facet.by = "variable", 
-       add = "mean_se",
-       xlab = "Time (hr)",
-       size = 1, scales = "free", linetype = "dashed") + rotate_x_text() 
+od.plot.mix <- all.OD2 %>% 
+  filter(variable == "OD600") %>% 
+  ggline("Timepoint", "value",
+         add = "mean_se",
+         xlab = "Time (hr)",
+         ylab = expression("O.D"[600]),
+         size = 1, 
+         linetype = "dashed") + 
+  rotate_x_text() + 
+  theme_bw(base_size = 14) + 
+  ylim(c(0,2.5)) + 
+  theme(strip.background = element_rect(fill="white")) 
 
-p.od <- p.od + theme_bw(base_size = 14) + theme(strip.background = element_rect(fill="white")) 
+ph.plot.mix <- all.OD2 %>% 
+  filter(variable == "pH") %>% 
+  ggline("Timepoint", "value",
+         add = "mean_se",
+         xlab = "Time (hr)",
+         ylab = "pH",
+         size = 1, 
+         linetype = "dashed") + 
+  rotate_x_text() + 
+  theme_bw(base_size = 14) + 
+  ylim(c(6,8)) + 
+  theme(strip.background = element_rect(fill="white")) 
+od.plot.mix + ph.plot.mix
 
-p.od  
+ggsave("data/02_wetlab/figs/R1_mixed_OD_PH_figure.pdf", height = 3, width = 6)
 
-ggsave("data/02_wetlab/figs/01_mixed_culture_OD_PH_figure.pdf", height = 3, width = 6)
-ggsave("data/02_wetlab/figs/01_mixed_culture_OD_PH_figure.png", height = 3, width = 6)
-ggsave("data/02_wetlab/figs/01_mixed_culture_OD_PH_figure.tiff", height = 3, width = 6)
 ```
 
-## pH changes in monocultures 
+## Reviewer
+```{r}
+ph.means <- all.OD2 %>% 
+  filter(variable == "pH") %>% 
+  group_by(Timepoint) %>% 
+  summarise(mean.conc = mean(value),
+            sd.conc = sd(value))
+ph.means
+readr::write_csv(ph.means, "data/02_wetlab/tables/mixed_cultre_ph.csv")
+
+ph.means$Timepoint
+```
+
+## Reviewer-2 
+
+```{r}
+rint.but <- all2 %>% 
+  filter(BacterialStrain == "Roseburia intestinalis") %>% 
+  group_by(Timepoint, variable) %>% 
+  summarise(mean.conc = mean(value),
+            sd.conc = sd(value)) %>% 
+  as.data.frame()
+rint.but
+
+bac.scfa <- all2 %>% 
+  #filter(BacterialStrain == "Roseburia intestinalis") %>% 
+  group_by(BacterialStrain, Timepoint, variable) %>% 
+  summarise(mean.conc = mean(value),
+            sd.conc = sd(value)) %>% 
+  as.data.frame()
+DT::datatable(bac.scfa)
+readr::write_csv(bac.scfa, "data/02_wetlab/tables/mono_cultre_scfas_all.csv")
+
+
+```
+
+# pH changes in monocultures 
 ```{r}
 # pH 
-
-
 ph_data <- read.csv("data_raw/02_wetlab/mono_culture_od_ph.csv", 
-                      row.names = 1, header = T, 
-                      stringsAsFactors = F)
-
+                    row.names = 1, header = T, 
+                    stringsAsFactors = F)
 all.ph2 <- reshape2::melt(ph_data)
+all.ph2$TimepointNum <- all.ph2$Timepoint
+all.ph2$TimepointNum <- as.numeric(gsub("T", "",all.ph2$TimepointNum))
 
-#scale_ph <- scale_y_continuous(breaks = c(2, 4, 6, 8, 9), labels = c("2", "4", "6", "8", "9"))
+all.ph2$BacterialStrain <- gsub("Lachnospiraceae bacterium 7_1_58FAA", 
+                                "Flavonifractor plautii",
+                                all.ph2$BacterialStrain)
 
-#scale_ph <- scale_y_continuous(limits=c(5, 9))
 
+od.plot.mono <- all.ph2 %>% 
+  filter(variable == "OD") %>% 
+  ggline(x = "TimepointNum", 
+         y = "value",
+         color = "BacterialStrain",
+         add = "mean_se",
+         xlab = "Time (hr)",
+         ylab = expression("O.D"[600]),
+         size = 1) + 
+  rotate_x_text() + 
+  scale_color_manual("", values= strain.colors) +
+  theme_bw(base_size = 14) + 
+  ylim(c(0,3.5)) + 
+  theme(strip.background = element_rect(fill="white")) 
+od.plot.mono <- ggpar(od.plot.mono, legend = "right", font.legend = c("italic"))
+od.plot.mono
 
-p.ph <- ggline(all.ph2, "Timepoint","value",  color = "BacterialStrain", 
-               facet.by = c("variable"),
-               add = "mean_se",
-               ylab = "Value",
-               xlab = "Time (hr)", legend = "right",
-               tickslab = T,
-               scales = "free") + rotate_x_text() + scale_color_manual("Bacterial strain", values= strain.colors) + theme_classic2(base_size = 14)
+ph.plot.mono <- all.ph2 %>% 
+  filter(variable == "PH") %>% 
+  ggline(x = "TimepointNum", 
+         y = "value",
+         color = "BacterialStrain",
+         add = "mean_se",
+         xlab = "Time (hr)",
+         ylab = expression("pH"),
+         size = 1) + 
+  rotate_x_text() + 
+  scale_color_manual("", values= strain.colors) +
+  theme_bw(base_size = 14) + 
+  #ylim(c(4,8)) + 
+  theme(strip.background = element_rect(fill="white"),
+        legend.position = "none") 
+#ph.plot.mono <- ggpar(ph.plot.mono, legend = "right", font.legend = c("italic"))
+ph.plot.mono
 
-p.ph 
+(od.plot.mono | ph.plot.mono) + plot_layout(guides = "collect")
 
-ggsave("data/02_wetlab/figs/01_mono_culture_OD_PH.pdf", height = 4, width = 10)
-
-ggsave("data/02_wetlab/figs/01_mono_culture_OD_PH.tiff", height = 4, width = 10)
+ggsave("data/02_wetlab/figs/01_mono_culture_OD_PH_New.pdf", height = 4, width = 10)
 
 ```
 
